--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -83,15 +83,16 @@ Fishing.Effect.2=P\u00eache magique
 Fishing.Effect.3=Remonte des objets magiques
 Fishing.Effect.4=Secousse (sur monstres)
 Fishing.Effect.5=Fait tomber des objets des monstres avec une canne \u00e0 p\u00eache
+Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Tr\u00e9sor d\u00e9couvert !
 Fishing.Listener=P\u00eache :
 Fishing.MagicFound=[[GRAY]]Vous ressentez quelque chose de magique dans cette prise...
 Fishing.SkillName=P\u00caCHE
 Fishing.Skillup=[[YELLOW]]Le talent p\u00eache augmente de {0}. Total ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Chance de double drop : [[YELLOW]]{0}%
+Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]R\u00e9gime de fermier : [[YELLOW]]Rang {0}
 Herbalism.Ability.GTe.Length=[[RED]]Dur\u00e9e de Main verte : [[YELLOW]]{0}s
-Herbalism.Ability.GTh.Chance=[[RED]]Probabilit\u00e9 de Doigts verts : [[YELLOW]]{0}%
+Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**DOIGTS VERTS \u00c9CHOU\u00c9**
 Herbalism.Ability.GTh.Stage=[[RED]]Doigts verts : [[YELLOW]] Le bl\u00e9 passe directement \u00e0 l\'\u00e9tape {0}
 Herbalism.Ability.GTh=[[GREEN]]**DOIGTS VERTS**
@@ -101,8 +102,8 @@ Herbalism.Effect.0=Main verte (Comp\u00e9tence)
 Herbalism.Effect.1=Propage les plantes / triple drops
 Herbalism.Effect.2=Doigts verts (Wheat)
 Herbalism.Effect.3=Replante le bl\u00e9 lors de la r\u00e9colte
-Herbalism.Effect.4=Doigts verts (Cobble/Stone Brick)
-Herbalism.Effect.5=Cobblestone/Stone Brick -> Mossy  en utilisant des graines
+Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick/Dirt)
+Herbalism.Effect.5=Make bricks mossy, or make grass grow
 Herbalism.Effect.6=R\u00e9gime de fermier
 Herbalism.Effect.7=Am\u00e9liore la nutrition des produits de la ferme
 Herbalism.Effect.8=Double drops
@@ -131,8 +132,8 @@ Mining.Effect.6=Grosses explosions
 Mining.Effect.7=Augmente le rayon d\'explosion de la TNT
 Mining.Effect.8=Expert en d\u00e9molition
 Mining.Effect.9=R\u00e9duit les d\u00e9g\u00e2ts provenant de la TNT
-Mining.Effect.Decrease=[[RED]]Expert en d\u00e9molition, r\u00e9duction de d\u00e9g\u00e2ts : [[YELLOW]]{0}%
-Mining.Effect.DropChance=[[RED]]Chance de double drop : [[YELLOW]]{0}%
+Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}
+Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Mining.Listener=Minage :
 Mining.SkillName=MINAGE
 Mining.Skills.SuperBreaker.Off=[[RED]]**Votre comp\u00e9tence Broyeur est termin\u00e9e**
@@ -155,7 +156,13 @@ Mining.Blast.Rank=[[RED]]Minage explosif : [[YELLOW]]Rang {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Minage explosif !
 Mining.Blast.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Minage Explosif[[GREEN]] est pr\u00eate !
 Repair.Effect.0=R\u00e9paration
-Repair.Effect.1=R\u00e9pare les outils et armures en fer
+Repair.Effect.1=Repair Tools & Armor
+Repair.Effect.10=Gold Repair ({0}+ SKILL)
+Repair.Effect.11=Repair Gold Tools & Armor
+Repair.Effect.12=Iron Repair ({0}+ SKILL)
+Repair.Effect.13=Repair Iron Tools & Armor
+Repair.Effect.14=Stone Repair ({0}+ SKILL)
+Repair.Effect.15=Repair Stone Tools
 Repair.Effect.2=Ma\u00eetrise du forgeage
 Repair.Effect.3=Am\u00e9liore la r\u00e9paration
 Repair.Effect.4=Superbe r\u00e9paration
@@ -173,12 +180,12 @@ Repair.Skills.AdeptIron=[[DARK_RED]]Vous n\'\u00eates pas suffisamment comp\u00e
 Repair.Skills.AdeptStone=[[DARK_RED]]Vous n\'\u00eates pas suffisamment comp\u00e9tent pour r\u00e9parer la pierre.
 Repair.Skills.FeltEasy=[[GRAY]]Plut\u00f4t facile.
 Repair.Skills.FullDurability=[[GRAY]]C\'est d\u00e9j\u00e0 r\u00e9par\u00e9.
-Repair.Skills.Mastery=[[RED]]Ma\u00eetrise du forgeage : [[YELLOW]]Durabilit\u00e9 restaur\u00e9e augment\u00e9e de {0}%
+Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]Vous ne pouvez pas r\u00e9parer les objets empil\u00e9s.
-Repair.Skills.Super.Chance=[[RED]]Probabilit\u00e9 de superbe r\u00e9paration : [[YELLOW]]{0}%
+Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Le talent R\u00e9paration augmente de {0}. Total ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]Forge arcanique, chance de d\u00e9gradation : [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]Forge arcanique, taux de succ\u00e8s : [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Les \u00e9nergies arcaniques ont \u00e9t\u00e9 affaiblies sur cet objet.
 Repair.Arcane.Fail=[[RED]]Les \u00e9nergies arcaniques ont quitt\u00e9 cet objet.
 Repair.Arcane.Lost=[[RED]]Vous n\'\u00e9tiez pas suffisamment comp\u00e9tent pour pr\u00e9server les enchantements.
@@ -186,15 +193,14 @@ Repair.Arcane.Perfect=[[GREEN]]Vous avez pr\u00e9serv\u00e9 les \u00e9nergies ar
 Repair.Arcane.Rank=[[RED]]Forge arcanique : [[YELLOW]]Rang {0}/4
 Swords.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOTRE \u00c9P\u00c9E**
 Swords.Ability.Ready=[[GREEN]]**VOUS LEVEZ VOTRE \u00c9P\u00c9E**
-Swords.Combat.Bleed.Chance=[[RED]]Chance de saignement : [[YELLOW]]{0}%
+Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Dur\u00e9e de saignement : [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE : [[YELLOW]]1 tick toutes les 2 secondes
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Le saignement s\'est [[GREEN]]arr\u00eat\u00e9[[GRAY]] !
 Swords.Combat.Bleeding=[[GREEN]]**L\'ENNEMI SAIGNE**
-Swords.Combat.Counter.Chance=[[RED]]Chance de contre-attaque : [[YELLOW]]{0}%
+Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]Touch\u00e9 par une contre-attaque !
 Swords.Combat.Countered=[[GREEN]]**CONTRE-ATTAQUE**
-Swords.Combat.Parry.Chance=[[RED]]Chance de parade : [[YELLOW]]{0} %
 Swords.Combat.SS.Struck=[[DARK_RED]]Frapp\u00e9 par ATTAQUE D\u00c9CHIRANTE !
 Swords.Effect.0=Contre-attaque
 Swords.Effect.1=Renvoie 50% des d\u00e9g\u00e2ts re\u00e7us
@@ -227,9 +233,9 @@ Taming.Ability.Locked.1=VERROUILL\u00c9 AVANT 250+ (Fourrure \u00e9paisse)
 Taming.Ability.Locked.2=VERROUILL\u00c9 AVANT 500+ (R\u00e9sistance aux chocs)
 Taming.Ability.Locked.3=VERROUILL\u00c9 AVANT 750+ (Griffes ac\u00e9r\u00e9es)
 Taming.Ability.Locked.4=VERROUILL\u00c9 AVANT 50+ (Fast food)
-Taming.Combat.Chance.Gore=[[RED]]Chance de morsure : [[YELLOW]]{0}%
+Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}
 Taming.Effect.0=Connaissances des b\u00eates
-Taming.Effect.1=Un coup d\'os inspecte les loups et ocelots
+Taming.Effect.1=Bone-whacking inspects wolves & ocelots
 Taming.Effect.10=R\u00e9sistance aux chocs
 Taming.Effect.11=R\u00e9duction des d\u00e9g\u00e2ts explosifs
 Taming.Effect.12=Appel de la nature
@@ -256,8 +262,8 @@ Taming.Summon.Fail.Wolf=[[RED]]Il y a d\u00e9j\u00e0 trop de loups dans les envi
 Unarmed.Ability.Berserk.Length=[[RED]]Dur\u00e9e de Berserk : [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Poings de fer
 Unarmed.Ability.Bonus.1=+{0} de d\u00e9g\u00e2ts
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Chance de d\u00e9viation de fl\u00e8che : [[YELLOW]]{0}%
-Unarmed.Ability.Chance.Disarm=[[RED]]Chance de d\u00e9sarmement : [[YELLOW]]{0}%
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOS POINGS**
 Unarmed.Ability.Ready=[[GREEN]]**VOUS LEVEZ VOS POINGS**
 Unarmed.Effect.0=Berserk (Comp\u00e9tence)
@@ -277,8 +283,8 @@ Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]
 Unarmed.Skills.Berserk.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Berserk [[GREEN]]est pr\u00eate !
 Unarmed.Skillup=[[YELLOW]]Le talent Poings augmente de {0}. Total ({1})
 Woodcutting.Ability.0=Soufflage
-Woodcutting.Ability.1=Souffle les feuilles
-Woodcutting.Ability.Chance.DDrop=[[RED]]Chance de double drop : [[YELLOW]]{0}%
+Woodcutting.Ability.1=Cong\u00e9s de coup
+Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Dur\u00e9e d\'Abbateur : [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=VERROUILL\u00c9 AVANT 100+ (Soufflage)
 Woodcutting.Effect.0=Abatteur (Comp\u00e9tence)
@@ -288,7 +294,7 @@ Woodcutting.Effect.3=Souffle les feuilles
 Woodcutting.Effect.4=Double drops
 Woodcutting.Effect.5=Double la quantit\u00e9 r\u00e9colt\u00e9e
 Woodcutting.Listener=B\u00fbcheronnage :
-Woodcutting.SkillName=B\u00dbCHERONNAGE
+Woodcutting.SkillName=COUPURE DE BOIS
 Woodcutting.Skills.TreeFeller.Off=[[RED]]**Votre comp\u00e9tence Abatteur est termin\u00e9e**
 Woodcutting.Skills.TreeFeller.On=[[GREEN]]**ABATTEUR ACTIV\u00c9**
 Woodcutting.Skills.TreeFeller.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Abatteur [[GREEN]]est pr\u00eate !
@@ -409,7 +415,7 @@ XPRate.Event=[[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 Effects.Effects=EFFETS
 Effects.Level=[[DARK_GRAY]]NIV : [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0} : [[GREEN]]{1}
-Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
+Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
 Guides.Archery=Guide coming soon...
 Guides.Axes=Guide coming soon...
 Guides.Excavation=[[DARK_AQUA]]About Excavation:\n[[YELLOW]]Excavation is the act of digging up dirt to find treasures.\n[[YELLOW]]By excavating the land you will find treasures.\n[[YELLOW]]The more you do this the more treasures you can find.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you must dig with a shovel in hand.\n[[YELLOW]]Only certain materials can be dug up for treasures and XP.\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Grass, Dirt, Sand, Clay, Gravel, Mycelium, Soul Sand\n\n[[DARK_AQUA]]How to use Giga Drill Breaker:\n[[YELLOW]]With a shovel in hand right click to ready your tool.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
@@ -421,7 +427,7 @@ Guides.Swords=Guide coming soon...
 Guides.Taming=Guide coming soon...
 Guides.Unarmed=Guide coming soon...
 Guides.Woodcutting=Guide coming soon...
-Inspect.Offline=[[RED]]Ce joueur est hors-ligne, l\'inspection des joueurs hors-ligne est r\u00e9serv\u00e9 aux admins !
+Inspect.Offline=[[RED]]You do not have permission to inspect offline players!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]Vous \u00eates trop \u00e9loign\u00e9 de ce joueur pour l\'inspecter !
