--- a/src/main/resources/locale/locale_sv.properties
+++ b/src/main/resources/locale/locale_sv.properties
@@ -83,15 +83,16 @@ Fishing.Effect.2=Magic Hunter
 Fishing.Effect.3=Find Enchanted Items
 Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
+Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Treasure found!
 Fishing.Listener=Fishing:
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
+Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
-Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}%
+Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**GREEN THUMB FAIL**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Wheat grows in stage {0}
 Herbalism.Ability.GTh=[[GREEN]]**GREEN THUMB**
@@ -101,8 +102,8 @@ Herbalism.Effect.0=Green Terra (ABILITY)
 Herbalism.Effect.1=Spread the Terra, 3x Drops
 Herbalism.Effect.2=Green Thumb (Wheat)
 Herbalism.Effect.3=Auto-Plants wheat when harvesting
-Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick)
-Herbalism.Effect.5=Cobblestone/Stone Brick -> Mossy w/ Seeds
+Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick/Dirt)
+Herbalism.Effect.5=Make bricks mossy, or make grass grow
 Herbalism.Effect.6=Farmer\'s Diet
 Herbalism.Effect.7=Improves hunger restored from farmed foods
 Herbalism.Effect.8=Double Drops (All Herbs)
@@ -131,8 +132,8 @@ Mining.Effect.6=Bigger Bombs
 Mining.Effect.7=Increases TNT explosion radius
 Mining.Effect.8=Demolitions Expertise
 Mining.Effect.9=Decreases damage from TNT explosions
-Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}%
-Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
+Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}
+Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Mining.Listener=Mining:
 Mining.SkillName=MINING
 Mining.Skills.SuperBreaker.Off=[[RED]]**Super Breaker has worn off**
@@ -155,7 +156,13 @@ Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Din [[YELLOW]]Explosionshacknings [[GREEN]]f\u00f6rm\u00e5ga \u00e4r fulladdad!
 Repair.Effect.0=Repair
-Repair.Effect.1=Repair Iron Tools & Armor
+Repair.Effect.1=Repair Tools & Armor
+Repair.Effect.10=Gold Repair ({0}+ SKILL)
+Repair.Effect.11=Repair Gold Tools & Armor
+Repair.Effect.12=Iron Repair ({0}+ SKILL)
+Repair.Effect.13=Repair Iron Tools & Armor
+Repair.Effect.14=Stone Repair ({0}+ SKILL)
+Repair.Effect.15=Repair Stone Tools
 Repair.Effect.2=Repair Mastery
 Repair.Effect.3=Increased repair amount
 Repair.Effect.4=Super Repair
@@ -173,12 +180,12 @@ Repair.Skills.AdeptIron=[[DARK_RED]]You\'re not skilled enough to repair Iron.
 Repair.Skills.AdeptStone=[[DARK_RED]]You\'re not skilled enough to repair Stone.
 Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
 Repair.Skills.FullDurability=[[GRAY]]That is at full durability.
-Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0}% durability restored
+Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]You can\'t repair stacked items.
-Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}%
+Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Repair skill increased by {0}. Total ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Arcane power has decreased for this item.
 Repair.Arcane.Fail=[[RED]]Arcane power has permanently left the item.
 Repair.Arcane.Lost=[[RED]]You were not skilled enough to keep any enchantments.
@@ -186,15 +193,14 @@ Repair.Arcane.Perfect=[[GREEN]]You have sustained the arcane energies in this it
 Repair.Arcane.Rank=[[RED]]Arcane Forging: [[YELLOW]]Rank {0}/4
 Swords.Ability.Lower=[[GRAY]]**YOU LOWER YOUR SWORD**
 Swords.Ability.Ready=[[GREEN]]**YOU READY YOUR SWORD**
-Swords.Combat.Bleed.Chance=[[RED]]Bl\u00f6dningschans: [[YELLOW]]{0} %
+Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Bleed Length: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE: [[YELLOW]]1 Tick happens every 2 seconds
 Swords.Combat.Bleeding.Stopped=[[GRAY]]F\u00f6rbl\u00f6dningen har [[GREEN]]stoppats[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**ENEMY BLEEDING**
-Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}%
+Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]Hit with a counter-attack!
 Swords.Combat.Countered=[[GREEN]]**COUNTER-ATTACKED**
-Swords.Combat.Parry.Chance=[[RED]]Parry Chance: [[YELLOW]]{0} %
 Swords.Combat.SS.Struck=[[DARK_RED]]Struck by SERRATED STRIKES!
 Swords.Effect.0=Counter Attack
 Swords.Effect.1=Reflect 50% of damage taken
@@ -227,9 +233,9 @@ Taming.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL 500+ SKILL (SHOCK PROOF)
 Taming.Ability.Locked.3=LOCKED UNTIL 750+ SKILL (SHARPENED CLAWS)
 Taming.Ability.Locked.4=LOCKED UNTIL 50+ SKILL (FAST FOOD SERVICE)
-Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}%
+Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}
 Taming.Effect.0=Beast Lore
-Taming.Effect.1=Bone-whacking inspects wolves/ocelots
+Taming.Effect.1=Bone-whacking inspects wolves & ocelots
 Taming.Effect.10=Shock Proof
 Taming.Effect.11=Explosive Damage Reduction
 Taming.Effect.12=Call of the Wild
@@ -256,8 +262,8 @@ Taming.Summon.Fail.Wolf=[[RED]]You have too many wolves nearby to summon any mor
 Unarmed.Ability.Berserk.Length=[[RED]]Berserk Length: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Iron Arm Style
 Unarmed.Ability.Bonus.1=+{0} DMG Upgrade
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}%
-Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}%
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**YOU LOWER YOUR FISTS**
 Unarmed.Ability.Ready=[[GREEN]]**YOU READY YOUR FISTS**
 Unarmed.Effect.0=Berserk (ABILITY)
@@ -278,7 +284,7 @@ Unarmed.Skills.Berserk.Refresh=[[GREEN]]Your [[YELLOW]]Berserk [[GREEN]]ability 
 Unarmed.Skillup=[[YELLOW]]Unarmed skill increased by {0}. Total ({1})
 Woodcutting.Ability.0=Leaf Blower
 Woodcutting.Ability.1=Blow away leaves
-Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
+Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Tree Feller Length: [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=LOCKED UNTIL 100+ SKILL (LEAF BLOWER)
 Woodcutting.Effect.0=Tree Feller (ABILITY)
@@ -409,7 +415,7 @@ XPRate.Event=[[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 Effects.Effects=EFFECTS
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
-Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
+Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
 Guides.Archery=Guide coming soon...
 Guides.Axes=Guide coming soon...
 Guides.Excavation=[DARK_AQUA]]Om Gr\u00e4vning:\n[[YELLOW]]Gr\u00e4vning \u00e4r n\u00e4r man gr\u00e4ver f\u00f6r att leta efter skatter.\n[[YELLOW]]Du hittar skatter genom att gr\u00e4va i marken.\n[[YELLOW]]Ju mer du g\u00f6r detta, desto fler skatter kommer du hitta.\n\n[[DARK_AQUA]]:XP \u00d6KNING\n[[YELLOW]]F\u00f6r att f\u00e5 XP m\u00e5ste du gr\u00e4va med en spade i din hand.\n[[YELLOW]]Man f\u00e5r bara XP av vissa material.\n[[DARK_AQUA]]Kompatibla Material:\n[[YELLOW]]Gr\u00e4s, Jord, Sand, Lera, Grus, Mycelium, Sj\u00e4lssand\n\n[[DARK_AQUA]]Hur du anv\u00e4nder Mega Gr\u00e4varen:\n[[YELLOW]]H\u00f6gerklicka med en spade i din hand.\n[[YELLOW]]N\u00e4r du har gjort det har du 4 sekunder p\u00e5 dig att\n[[YELLOW]]b\u00f6rja gr\u00e4va snabbt och aktivera\n[[YELLOW]] Mega Gr\u00e4varen.\n[[DARK_AQUA]]Vad \u00e4r Mega Gr\u00e4varen?\n[[YELLOW]]Mega Gr\u00e4varen \u00e4r en f\u00f6rm\u00e5ga med pauser\n[[YELLOW]]som \u00e4r till f\u00f6r Gr\u00e4vningsf\u00e4rdigheten\n[[YELLOW]]att hitta skatter och f\u00f6r att gr\u00e4va snabbare\n[[YELLOW]]p\u00e5 Gr\u00e4vningsmaterial\n\n[[DARK_AQUA]]Hur funkar Skatt Letare?\n[[YELLOW]]Varenda m\u00f6jliga skatt f\u00f6r Gr\u00e4vning kr\u00e4ver en viss\n[[YELLOW]]f\u00f6rm\u00e5gelevel  f\u00f6r att droppas, och som ett resultat \u00e4r det\n[[YELLOW]]sv\u00e5rt att s\u00e4ga hur mycket det hj\u00e4lper dig.\n[[YELLOW]]T\u00e4nk bara p\u00e5 att ju h\u00f6gre din Gr\u00e4vningsf\u00f6rm\u00e5ga\n[[YELLOW]]\u00e4r, desto fler skatter kan du hitta.\n[[YELLOW]]Kom ocks\u00e5 ih\u00e5g att varje gr\u00e4vnings-\n[[YELLOW]]kompatibelt material har en unik lista med olika skatter.\n[[YELLOW]]Det betyder att du kommer hitta andra saker i jord\n[[YELLOW]]\u00e4n vad du hittar i grus.\n[[DARK_AQUA]]Noteringar om Gr\u00e4vning:\n[[YELLOW]]Gr\u00e4vnings droppar \u00e4r helt anpassningsbara\n[[YELLOW]]S\u00e5 resultatet varierar fr\u00e5n server till server.
@@ -421,7 +427,7 @@ Guides.Swords=Guide coming soon...
 Guides.Taming=Guide coming soon...
 Guides.Unarmed=Guide coming soon...
 Guides.Woodcutting=Guide coming soon...
-Inspect.Offline=[[RED]]That player is offline, inspecting offline players is limited to Ops!
+Inspect.Offline=[[RED]]You do not have permission to inspect offline players!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
