--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -7,7 +7,7 @@ Acrobatics.Effect.2=Rodada Majestuosa
 Acrobatics.Effect.3=El doble de efectivo que una rodada normal
 Acrobatics.Effect.4=Esquivar
 Acrobatics.Effect.5=Reduce el da\u00f1o de ataque a la mitad
-Acrobatics.Listener=Acrobacias:
+Acrobatics.Listener=Acrobacias: 
 Acrobatics.Roll.Chance=[[RED]]Probabilidad de Rodar: [[YELLOW]]{0}%
 Acrobatics.Roll.GraceChance=[[RED]]Probabilidad de Rodada Majestuosa: [[YELLOW]]{0}%
 Acrobatics.Roll.Text=**Rodado**
@@ -22,7 +22,7 @@ Archery.Effect.2=Aturdir (Jugadores)
 Archery.Effect.3=Desorienta a los enemigos y saca 4 corazones de da\u00f1o
 Archery.Effect.4=Recuperaci\u00f3n de Flecha
 Archery.Effect.5=Probabilidad de recuperar flechas de los cadaveres
-Archery.Listener=Arquer\u00eda:
+Archery.Listener=Arquer\u00eda: 
 Archery.SkillName=ARQUER\u00cdA
 Archery.Skillup=[[YELLOW]]Habilidad de Arquer\u00eda incrementada en {0}. Total ({1})
 Axes.Ability.Bonus.0=Dominio del Hacha
@@ -50,7 +50,7 @@ Axes.Effect.6=Impacto
 Axes.Effect.7=Golpear con fuerza como para destruir armaduras
 Axes.Effect.8=Gran Impacto
 Axes.Effect.9=Hacer da\u00f1o bonus a los enemigos sin armadura
-Axes.Listener=Hachas:
+Axes.Listener=Hachas: 
 Axes.SkillName=HACHAS
 Axes.Skills.SS.Off=[[RED]]**Parte Cr\u00e1neos ha expirado**
 Axes.Skills.SS.On=[[GREEN]]**PARTE CR\u00c1NEOS ACTIVADO**
@@ -65,7 +65,7 @@ Excavation.Effect.1=Triple Drop, Tripe EXP, M\u00e1s Velocidad
 Excavation.Effect.2=Cazador de Tesoros
 Excavation.Effect.3=Habilidad para cavar por tesoros
 Excavation.Effect.Length=[[RED]]Duraci\u00f3n de Ultra Taladro Destructor: [[YELLOW]]{0}seg
-Excavation.Listener=Excavaci\u00f3n:
+Excavation.Listener=Excavaci\u00f3n: 
 Excavation.SkillName=EXCAVACI\u00d3N
 Excavation.Skills.GigaDrillBreaker.Off=[[RED]]**Ultra Taladro Destructor ha expirado**
 Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREAKER ACTIVADO**
@@ -83,15 +83,16 @@ Fishing.Effect.2=Cazador M\u00e1gico
 Fishing.Effect.3=Encuentra Objetos Encantados
 Fishing.Effect.4=Sacudir (contra Entidades)
 Fishing.Effect.5=Sacudir los items fuera de los monstruos con la ca\u00f1a de pescar
+Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]\u00a1Tesoro encontrado!
-Fishing.Listener=Pescador:
+Fishing.Listener=Pescador: 
 Fishing.MagicFound=[[GRAY]]Sientes un toque de magia con esta pesca...
 Fishing.SkillName=PESCADOR
 Fishing.Skillup=[[YELLOW]]Habilidad de Pescador incrementada en {0}. Total ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}%
+Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Dieta del Granjero: [[YELLOW]]Rango {0}
 Herbalism.Ability.GTe.Length=[[RED]]Duraci\u00f3n de Tierra Verde: [[YELLOW]]{0}seg
-Herbalism.Ability.GTh.Chance=[[RED]]Probabilidad de Pulgar Verde: [[YELLOW]]{0}%
+Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**PULGAR VERDE FALL\u00d3**
 Herbalism.Ability.GTh.Stage=[[RED]]Etapa de Pulgar Verde: [[YELLOW]]El trigo crece en etapa {0}
 Herbalism.Ability.GTh=[[GREEN]]**PULGAR VERDE**
@@ -101,8 +102,8 @@ Herbalism.Effect.0=Tierra Verde (HABILIDAD)
 Herbalism.Effect.1=Arar la Tierra, Triple Drops
 Herbalism.Effect.2=Pulgar Verde (Trigo)
 Herbalism.Effect.3=Planta trigo autom\u00e1ticamente al recolectar
-Herbalism.Effect.4=Pulgar Verde (Roca/Ladrillo de Piedra)
-Herbalism.Effect.5=Roca/Ladrillo de Piedra -> Mohoso usando Semillas
+Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick/Dirt)
+Herbalism.Effect.5=Make bricks mossy, or make grass grow
 Herbalism.Effect.6=Dieta del Granjero
 Herbalism.Effect.7=Aumenta el hambre restaurada por la comida cultivada
 Herbalism.Effect.8=Doble Drops (Todas las Hierbas)
@@ -131,9 +132,9 @@ Mining.Effect.6=Mayores Bombas
 Mining.Effect.7=Incrementa el radio de la explosi\u00f3n de TNT
 Mining.Effect.8=Experto en Demoliciones
 Mining.Effect.9=Reduce el da\u00f1o de las explosiones de TNT
-Mining.Effect.Decrease=[[RED]]Da\u00f1o Disminuido por Experto en Demoliciones: [[YELLOW]]{0}%
-Mining.Effect.DropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}%
-Mining.Listener=Miner\u00eda:
+Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}
+Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
+Mining.Listener=Miner\u00eda: 
 Mining.SkillName=MINER\u00cdA
 Mining.Skills.SuperBreaker.Off=[[RED]]**S\u00faper Destructor ha expirado**
 Mining.Skills.SuperBreaker.On=[[GREEN]]**S\u00daPER DESTRUCTOR ACTIVADO**
@@ -155,7 +156,13 @@ Mining.Blast.Rank=[[RED]]Miner\u00eda Explosiva: [[YELLOW]] Rango {0}/8 [[GRAY]]
 Mining.Blast.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Miner\u00eda Explosiva!
 Mining.Blast.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Miner\u00eda Explosiva [[GREEN]]est\u00e1 refrescada!
 Repair.Effect.0=Reparaci\u00f3n
-Repair.Effect.1=Reparar Herramientas y Armaduras de Hierro
+Repair.Effect.1=Repair Tools & Armor
+Repair.Effect.10=Gold Repair ({0}+ SKILL)
+Repair.Effect.11=Repair Gold Tools & Armor
+Repair.Effect.12=Iron Repair ({0}+ SKILL)
+Repair.Effect.13=Repair Iron Tools & Armor
+Repair.Effect.14=Stone Repair ({0}+ SKILL)
+Repair.Effect.15=Repair Stone Tools
 Repair.Effect.2=Maestr\u00eda de la Reparaci\u00f3n
 Repair.Effect.3=Cantidad de reparaci\u00f3n Incrementada
 Repair.Effect.4=S\u00faper Reparaci\u00f3n
@@ -173,12 +180,12 @@ Repair.Skills.AdeptIron=[[DARK_RED]]No tienes la suficiente habilidad para repar
 Repair.Skills.AdeptStone=[[DARK_RED]]No tienes la suficiente habilidad para reparar Piedra.
 Repair.Skills.FeltEasy=[[GRAY]]Eso ha sido f\u00e1cil.
 Repair.Skills.FullDurability=[[GRAY]]Esto est\u00e1 nuevo.
-Repair.Skills.Mastery=[[RED]]Maestr\u00eda de la Reparaci\u00f3n: [[YELLOW]]{0}% de durabilidad restaurada extra
+Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]No puedes reparar items apilados.
-Repair.Skills.Super.Chance=[[RED]]Probabilidad de S\u00faper Reparaci\u00f3n: [[YELLOW]]{0}%
+Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Habilidad de Reparaci\u00f3n incrementada en {0}. Total ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilidad de Degradaci\u00f3n en FA: [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]Tasa de \u00c9xito de FA: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]El poder Arcano de este objeto ha disminu\u00eddo.
 Repair.Arcane.Fail=[[RED]]El objeto ha perdido permanentemente sus poderes Arcanos
 Repair.Arcane.Lost=[[RED]]No tienes habilidad suficiente para mantener ning\u00fan tipo de encantamientos.
@@ -186,15 +193,14 @@ Repair.Arcane.Perfect=[[GREEN]]Has logrado mantener las energ\u00edas Arcanas de
 Repair.Arcane.Rank=[[RED]]Forja Arcana: [[YELLOW]]Rango {0}/4
 Swords.Ability.Lower=[[GRAY]]**BAJAS TU ESPADA**
 Swords.Ability.Ready=[[GREEN]]**PREPARASTE TU ESPADA**
-Swords.Combat.Bleed.Chance=[[RED]]Probabilidad de Sangrado: [[YELLOW]]{0}%
+Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Duraci\u00f3n del Sangrado: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTA: [[YELLOW]]1 Tick sucede cada 2 segundos
 Swords.Combat.Bleeding.Stopped=[[GRAY]]\u00a1El sangrado ha [[GREEN]]parado[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**ENEMIGO SANGRANDO**
-Swords.Combat.Counter.Chance=[[RED]]Probabilidad de Contra Ataque: [[YELLOW]]{0}%
+Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]\u00a1Alcanzado por un contra ataque!
 Swords.Combat.Countered=[[GREEN]]**CONTRA-ATACADO**
-Swords.Combat.Parry.Chance=[[RED]]Probabilidad de Bloqueo: [[YELLOW]]{0}%
 Swords.Combat.SS.Struck=[[DARK_RED]]\u00a1Golpeado por ATAQUE DENTADO!
 Swords.Effect.0=Contra Ataque
 Swords.Effect.1=Reflejar el 50% del da\u00f1o recibido
@@ -204,7 +210,7 @@ Swords.Effect.4=Ataque Dentado Sangriento+
 Swords.Effect.5=Sangrado de 5 Ticks
 Swords.Effect.6=Sangrado
 Swords.Effect.7=Aplicar sangrado que da\u00f1a con el tiempo
-Swords.Listener=Espadas:
+Swords.Listener=Espadas: 
 Swords.SkillName=ESPADAS
 Swords.Skills.SS.Off=[[RED]]**Ataque Dentado ha expirado**
 Swords.Skills.SS.On=[[GREEN]]**ATAQUE DENTADO ACTIVADO**
@@ -227,9 +233,9 @@ Taming.Ability.Locked.1=BLOQUEADO HASTA 250+ SKILL (PIEL GRUESA)
 Taming.Ability.Locked.2=BLOQUEADO HASTA 500+ SKILL (A PRUEBA DE GOLPES)
 Taming.Ability.Locked.3=BLOQUEADO HASTA 750+ SKILL (GARRAS AFILADAS)
 Taming.Ability.Locked.4=BLOQUEADO HASTA 50+ SKILL (SERVICIO DE COMIDA R\u00c1PIDA)
-Taming.Combat.Chance.Gore=[[RED]]Probabilidad de Mordisco: [[YELLOW]]{0}%
+Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}
 Taming.Effect.0=Conocimiento de la Bestia
-Taming.Effect.1=Golpear con un hueso para inspeccionar lobos u ocelotes
+Taming.Effect.1=Bone-whacking inspects wolves & ocelots
 Taming.Effect.10=A Prueba de Golpes
 Taming.Effect.11=Reducci\u00f3n de Da\u00f1o por Explosiones
 Taming.Effect.12=Llamado a la Naturaleza
@@ -247,7 +253,7 @@ Taming.Effect.7=Fobia al Cactus y a la Lava, Inmune al Da\u00f1o por Ca\u00eddas
 Taming.Effect.8=Piel Gruesa
 Taming.Effect.9=Da\u00f1o Reducido, Resistencia al Fuego
 Taming.Listener.Wolf=[[DARK_GRAY]]T\u00fa lobo se escabulle hacia t\u00ed...
-Taming.Listener=Domador:
+Taming.Listener=Domador: 
 Taming.SkillName=DOMADOR
 Taming.Skillup=[[YELLOW]]Habilidad de Domador incrementada en {0}. Total ({1})
 Taming.Summon.Complete=[[GREEN]]Invocaci\u00f3n completada
@@ -256,8 +262,8 @@ Taming.Summon.Fail.Wolf=[[RED]]Tienes demasiados lobos cerca como para convocar 
 Unarmed.Ability.Berserk.Length=[[RED]]Duraci\u00f3n de Enloquecido: [[YELLOW]]{0}seg
 Unarmed.Ability.Bonus.0=Estilo del Pu\u00f1o de Hierro
 Unarmed.Ability.Bonus.1=+{0} Mejora de DA\u00d1O
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Probabilidad de Desv\u00edo de Flechas: [[YELLOW]]{0}%
-Unarmed.Ability.Chance.Disarm=[[RED]]Probabilidad de Desarmar: [[YELLOW]]{0}%
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**BAJAS TUS PU\u00d1OS**
 Unarmed.Ability.Ready=[[GREEN]]**LEVANTASTE LA GUARDIA**
 Unarmed.Effect.0=Enloquecido (HABILIDAD)
@@ -268,7 +274,7 @@ Unarmed.Effect.4=Estilo del Pu\u00f1o de Hierro
 Unarmed.Effect.5=Endurece su brazo con el tiempo
 Unarmed.Effect.6=Flecha Desviada
 Unarmed.Effect.7=Desviar flechas
-Unarmed.Listener=Desarmado:
+Unarmed.Listener=Desarmado: 
 Unarmed.SkillName=DESARMADO
 Unarmed.Skills.Berserk.Off=[[RED]]**Enloquecido ha expirado**
 Unarmed.Skills.Berserk.On=[[GREEN]]**ENLOQUECIDO ACTIVADO**
@@ -278,16 +284,16 @@ Unarmed.Skills.Berserk.Refresh=[[GREEN]]\u00a1T\u00fa habilidad [[YELLOW]]Enloqu
 Unarmed.Skillup=[[YELLOW]]Habilidad de Desarmado incrementada en {0}. Total ({1})
 Woodcutting.Ability.0=Soplador de Hojas
 Woodcutting.Ability.1=Remover hojas
-Woodcutting.Ability.Chance.DDrop=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}%
+Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Duraci\u00f3n de Ca\u00edda de \u00c1rbol: [[YELLOW]]{0}seg
-Woodcutting.Ability.Locked.0=BLOQUEADO HASTA HABILIDAD 100+ SKILL (SOPLADOR DE HOJAS)
+Woodcutting.Ability.Locked.0=BLOQUEADO HASTA HABILIDAD 100+ (SOPLADOR DE HOJAS)
 Woodcutting.Effect.0=Ca\u00edda de \u00c1rbol (HABILIDAD)
 Woodcutting.Effect.1=Hace que el \u00e1rbol explote
 Woodcutting.Effect.2=Soplador de Hojas
 Woodcutting.Effect.3=Remover Hojas
 Woodcutting.Effect.4=Doble Drops
 Woodcutting.Effect.5=El doble del bot\u00edn normal
-Woodcutting.Listener=Le\u00f1ador:
+Woodcutting.Listener=Le\u00f1ador: 
 Woodcutting.SkillName=LE\u00d1ADOR
 Woodcutting.Skills.TreeFeller.Off=[[RED]]**Caida de \u00c1rbol ha expirado**
 Woodcutting.Skills.TreeFeller.On=[[GREEN]]**CA\u00cdDA DE \u00c1RBOL ACTIVADA**
@@ -409,7 +415,7 @@ XPRate.Event=[[GOLD]]\u00a1mcMMO est\u00e1 ahora en un evento de rate de EXP! \u
 Effects.Effects=EFECTOS
 Effects.Level=[[DARK_GRAY]]Nivel: [[GREEN]]{0} [[DARK_AQUA]]EXP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
-Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
+Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
 Guides.Archery=Gu\u00eda pr\u00f3ximamente...
 Guides.Axes=Gu\u00eda pr\u00f3ximamente...
 Guides.Excavation=[[DARK_AQUA]]Sobre Excavaci\u00f3n:\n[[YELLOW]]Es el acto de excavar tierra para encontrar tesoros.\n[[YELLOW]]Cuanto m\u00e1s haces esto mas tesoros puedes encontrar.\n[[DARK_AQUA]]Ganancia de Experiencia:\n[[YELLOW]]Para obtener EXP en esta habilidad necesitas usar una pala.\n[[YELLOW]]Solo ciertos materiales pueden ser excavados para\n[[YELLOW]]obtener tesoros y EXP.\n[[DARK_AQUA]]Materiales Compatibles:\n[[YELLOW]]Pasto, Tierra, Arena, Arcilla, Grava y Arena del Infierno.\n[[DARK_AQUA]]Como usar Ultra Taladro Destructor:\n[[YELLOW]]Con una pala en mano hacer click derecho para prepararla.\n[[YELLOW]]Cuando est\u00e1 en este estado tienes cerca de 4 segundos para\n[[YELLOW]]hacer contacto con un material compatible para activar\n[[YELLOW]]la habilidad Ultra Taladro Destructor.\n[[DARK_AQUA]]\u00bfQu\u00e9 es Ultra Taladro Destructor?\n[[YELLOW]]Ultra Taladro Destructor es una habilidad limitada\n[[YELLOW]]relacionada a la habilidad de Excavaci\u00f3n. Triplica la\n[[YELLOW]]probabilidad de encontrar tesoros y activa destrucci\u00f3n\n[[YELLOW]]instant\u00e1nea de materiales de Excavaci\u00f3n.\n[[DARK_AQUA]]\u00bfC\u00f3mo funciona Cazados de Tesoros?\n[[YELLOW]]Cada posible tesoro de Excavaci\u00f3n tiene su propio nivel de\n[[YELLOW]]habilidad requerida para obtenerla, como resultado de esto\n[[YELLOW]]es dif\u00edcil decir cuanto te ayuda esto.\n[[YELLOW]]Solo recuerda que cuanto mayor nivel tengas, m\u00e1s tesoros\n[[YELLOW]]encontrar\u00e1s. Y tambi\u00e9n recuerda que cada tipo de material\n[[YELLOW]]de Excavaci\u00f3n tiene su propia lista de tesoros.\n[[YELLOW]]En otras palabras, encontrar\u00e1s diferentes tesoros en\n[[YELLOW]]Tierra que los que encontrar\u00edas en Grava.\n[[DARK_AQUA]]Notas sobre Excavaci\u00f3n:\n[[YELLOW]]Los drops son completamente personalizables, as\u00ed que\n[[YELLOW]]los resultados var\u00edan de un servidor a otro.
@@ -421,7 +427,7 @@ Guides.Swords=Gu\u00eda pr\u00f3ximamente...
 Guides.Taming=Gu\u00eda pr\u00f3ximamente...
 Guides.Unarmed=Gu\u00eda pr\u00f3ximamente...
 Guides.Woodcutting=Gu\u00eda pr\u00f3ximamente...
-Inspect.Offline=[[RED]]That player is offline, inspecting offline players is limited to Ops!
+Inspect.Offline=[[RED]]You do not have permission to inspect offline players!
 Inspect.OfflineStats=Estad\u00edsticas de mcMMO para el Jugador Desconectado [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]Estad\u00edsticas de mcMMO para [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]\u00a1Est\u00e1s demasiado lejos como para inspeccionar a ese jugador!
